--- a/src/main/webapp/style.css
+++ b/src/main/webapp/style.css
@@ -20,4 +20,21 @@ h1 {
 	font-weight: 700;
 	border-radius: 15px;
 	margin-left: 50px;
+	border: 0;
+	cursor: pointer;
+}
+
+.Caixa1 {
+	width: 320px;
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #66bbff;
+	border-radius: 15px;	
+}
+
+.Caixa2 {
+	padding: 5px;
+	margin-bottom: 10px;
+	border: 1px solid #66bbff;
+	border-radius: 15px;	
 }
